# xapian-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  export-ld-lib.sh  xapian-bind.cc  xapian-bind.h
.github/workflows/: docs.yml  rust.yml
examples/: hello.rs  index.rs  search.rs
include/xapian/: mset.h
include/xapian-1.4/xapian/: version.h
include/xapian-1.5/xapian/: error.h  version.h
src/: constants.rs  easy.rs  easy_wrapper.cc  easy_wrapper.cpp  easy_wrapper.h  lib.rs
