[package]
name = "xapian"
version = "0.1.3"
edition = "2021"
description = "Rust bindings to Xapian"
readme = "README.md"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT"
links = "xapian-rs"

[lib]
path = "src/lib.rs"

[dependencies]
cxx = "1.0.95"

[build-dependencies]
cxx-build = "1.0.95"

[dev-dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
