[package]
name = "xapian"
version = "0.1.4"
edition = "2021"
description = "Rust bindings to Xapian"
documentation = "https://docs.rs/xapian"
homepage = "https://github.com/ttys3/xapian-rs"
repository = "https://github.com/ttys3/xapian-rs.git"
readme = "README.md"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT"
links = "autocxx-xapian-rs"

[lib]
path = "src/lib.rs"

[dependencies]
cxx = { version = "1.0.95", features = ["c++17"] }
autocxx = "0.25.0"

[build-dependencies]
pkg-config = "0.3.27"
autocxx-build = "0.25.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!

[dev-dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[features]
vendored-xapian = []
64bit = [ "64bit-docid", "64bit-termcount", "64bit-termpos" ]
64bit-docid = []
64bit-termcount = []
64bit-termpos = []
